# nQPU

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  (+10 more)
sdk/rust/: Cargo.toml
sdk/rust/benches/: quantum_vs_classical.rs
sdk/rust/nqpu_metal/: __init__.py  optimizer.py  qiskit_compat.py
sdk/rust/src/: README.md  adapt_vqe.rs  adaptive_batching.rs  adaptive_mps.rs  adaptive_realtime_decoder.rs  advanced_error_mitigation.rs  advanced_noise.rs  advanced_quantum_ml.rs  advanced_tensor_networks.rs  ai_transpiler.rs  amx_tensor.rs  anharmonic.rs  annealing.rs  approximate_dynamical_qec.rs  arbitrary_tn.rs  arxiv_monitor.rs  ascii_viz.rs  auto_backend.rs  auto_simulator.rs  avx512_stabilizer.rs  bayesian_noise.rs  bayesian_treepes.rs  benchmark_suite.rs  bivariate_bicycle.rs  bosonic_codes.rs  bp_osd.rs  bulk_qec_sampling.rs  c_ffi.rs  camera_quantum.rs  camps.rs  camps_dmrg.rs  cat_qubit_concatenation.rs  certified_qrng.rs  certified_quantum.rs  circuit_cache.rs  circuit_complexity.rs  circuit_cutting.rs  circuit_equivalence.rs  circuit_export.rs  circuit_macro.rs  (+249 more)
sdk/rust/src/algorithms/: mod.rs
sdk/rust/src/algorithms/optimization/: annealing.rs  qamoo.rs  qao.rs  qaoa.rs  quantum_annealing.rs  qubo_encoder.rs  sqd.rs  warm_start_qaoa.rs
sdk/rust/src/algorithms/simulation/: gpu_pauli_propagation.rs  improved_trotter.rs  pauli_propagation.rs  pauli_propagation_gpu.rs  qram.rs  quantum_dynamics.rs  symmetry_simulation.rs  tucker_state_prep.rs
sdk/rust/src/algorithms/transforms/: amplitude_estimation.rs  foundational_algorithms.rs  grid_algorithms.rs  grover.rs  hhl.rs  optimistic_qft.rs  qft_2d.rs  qkmm.rs  qpe.rs  qsp_qsvt.rs  qswift.rs  quantum_walk.rs  randomized_qsvt.rs  shor.rs  spectrum_amplification.rs
sdk/rust/src/algorithms/variational/: adapt_vqe.rs  gga_vqe.rs  low_depth_ucc.rs  meta_vqe.rs  ssvqe.rs  vqe.rs
sdk/rust/src/applications/: mod.rs
sdk/rust/src/applications/creative/: creative_quantum.rs  quantum_art.rs  quantum_cognition.rs  quantum_nlp.rs
sdk/rust/src/applications/decision/: quantum_climate.rs  quantum_finance.rs  quantum_logistics.rs  selfish_routing.rs
sdk/rust/src/applications/games/: quantum_chess.rs  quantum_game.rs  quantum_poker.rs
sdk/rust/src/backends/: mod.rs
sdk/rust/src/backends/gpu/: cache_blocking.rs  cuda_backend.rs  gpu_memory_pool.rs  mixed_precision.rs  rocm_backend.rs
sdk/rust/src/backends/hardware/: digital_twin.rs  google_quantum.rs  hardware_calibration.rs  ibm_quantum.rs  live_calibration.rs  neutral_atom_array.rs  neutral_atom_backend.rs  photonic_advantage.rs  pinnacle_architecture.rs  superconducting.rs  trapped_ion.rs
sdk/rust/src/backends/metal/: amx_tensor.rs  metal4_backend.rs  metal_backend.rs  metal_gpu_fixed.rs  metal_gpu_full.rs  metal_stabilizer.rs  metal_state.rs  t1t2_integrated.rs  tensor_ops.rs
sdk/rust/src/backends/pulse/: cr_calibration.rs  dispersive_readout.rs  grape_optimizer.rs  metal_pulse_backend.rs  pulse_control.rs  pulse_simulation.rs  transmon_drag.rs
sdk/rust/src/backends/runtime/: auto_backend.rs  auto_simulator.rs  auto_tuning.rs  concurrent_uma.rs  uma_dispatch.rs
sdk/rust/src/chemistry/: mod.rs
sdk/rust/src/chemistry/applications/: quantum_drug_design.rs  quantum_materials.rs
sdk/rust/src/chemistry/electronic_structure/: camps_dmrg.rs  double_factorized.rs  molecular_integrals.rs  quantum_chemistry.rs
sdk/rust/src/circuits/: mod.rs
sdk/rust/src/circuits/analysis/: circuit_cache.rs  circuit_complexity.rs  circuit_cutting.rs  circuit_equivalence.rs  optimization_report.rs  shaded_lightcones.rs
sdk/rust/src/circuits/formats/: circuit_export.rs  circuit_serde.rs  qasm3.rs  qasm_lsp.rs  qir.rs
sdk/rust/src/circuits/synthesis/: ai_transpiler.rs  circuit_macro.rs  circuit_optimizer.rs  ft_compilation.rs  gate_fusion.rs  noise_aware_routing.rs  parametric_circuits.rs  quantum_synthesis.rs  transpiler.rs  treespilation.rs  zx_calculus.rs
sdk/rust/src/core/: mod.rs
sdk/rust/src/core/computation/: decision_diagram.rs  digital_analog.rs  matchgate_simulation.rs  mbqc.rs  mid_circuit.rs
sdk/rust/src/core/foundations/: pauli_algebra.rs  primitives.rs
sdk/rust/src/core/gates/: comprehensive_gates.rs  cq_adder.rs  gates.rs  simple_gates.rs
sdk/rust/src/core/stabilizer/: avx512_stabilizer.rs  clifford_t.rs  fast_stabilizer.rs  inverse_tableau.rs  near_clifford.rs  optimized_stabilizer.rs  reference_frame.rs  simd_stabilizer.rs  stabilizer.rs  stabilizer_router.rs
sdk/rust/src/core/state_models/: cv_quantum.rs  entanglement.rs  fermionic_gaussian.rs  quantum_channel.rs  quantum_f32.rs
sdk/rust/src/cuda/shaders/: parallel_quantum.cu
sdk/rust/src/decoding/: bp.rs  mod.rs  mwpm.rs
sdk/rust/src/error_correction/: mod.rs
sdk/rust/src/error_correction/codes/: bivariate_bicycle.rs  bosonic_codes.rs  cat_qubit_concatenation.rs  dynamic_surface_code.rs  floquet_codes.rs  holographic_codes.rs  hyperbolic_floquet.rs  qldpc.rs  quantum_error_correction.rs  rascql.rs  surface_codes.rs  trivariate_codes.rs  xzzx_surface.rs  yoked_surface_codes.rs
sdk/rust/src/error_correction/decoders/: adaptive_realtime_decoder.rs  bp_osd.rs  gpu_mwpm.rs  mamba_qec_decoder.rs  mbbp_ld_decoder.rs  metal_neural_decoder.rs  neural_decoder.rs  relay_bp.rs  sliding_window_decoder.rs  transformer_qec_decoder.rs  unified_neural_decoder.rs
sdk/rust/src/error_correction/tooling/: decoder_aware_transpiler.rs  qec_interop.rs  resource_estimator.rs  stim_format.rs  stim_import.rs
sdk/rust/src/infra/: mod.rs
sdk/rust/src/measurement/: mod.rs
sdk/rust/src/metal/: dmrg_kernels.metal  mod.rs  pulse_kernels.metal  quantum_gates.metal  shaders.metal  stabilizer.metal  transformer_attention.metal
sdk/rust/src/networking/: mod.rs
sdk/rust/src/noise/: mod.rs
sdk/rust/src/physics/: mod.rs
sdk/rust/src/qpu/: auth.rs  azure.rs  braket.rs  error.rs  google.rs  ibm.rs  ionq.rs  mock.rs  mod.rs  provider.rs
sdk/rust/src/quantum_ml/: mod.rs
sdk/rust/src/tensor_networks/: mod.rs
sdk/rust/src/web/: index.html  mod.rs
(+448 files in other folders)
