[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nqpu"
version = "0.1.0"
description = "Neuromorphic Quantum Processing Unit - High-performance quantum computing SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Entropy Research", email = "research@entropy.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/entropy-research/nqpu"
Documentation = "https://nqpu.readthedocs.io"
Repository = "https://github.com/entropy-research/nqpu"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "mypy>=1.0", "ruff>=0.1"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0"]
chem = [
    "rdkit>=2023.9",
    "openmm>=8.0",
    "mdtraj>=1.9",
]
bio = [
    "biopython>=1.83",
]
all = [
    "nqpu[chem]",
    "nqpu[bio]",
]

[tool.setuptools.packages.find]
where = ["sdk/python"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
