[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nqpu"
version = "0.1.0"
description = "Neural Quantum Processing Unit - High-performance quantum computing SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]
authors = [
    {name = "Entropy Research", email = "research@entropy.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/entropy-research/nqpu"
Documentation = "https://nqpu.readthedocs.io"
Repository = "https://github.com/entropy-research/nqpu"
Issues = "https://github.com/entropy-research/nqpu/issues"
Changelog = "https://github.com/entropy-research/nqpu/releases"

[project.scripts]
nqpu-qkd-api = "nqpu.web.app:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "mypy>=1.0", "ruff>=0.1"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0"]
chem = [
    "rdkit>=2023.9",
    "openmm>=8.0",
    "mdtraj>=1.9",
]
bio = [
    "biopython>=1.83",
]
trading = []
finance = [
    "matplotlib>=3.7",
]
web = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
]
all = [
    "rdkit>=2023.9",
    "openmm>=8.0",
    "mdtraj>=1.9",
    "biopython>=1.83",
    "matplotlib>=3.7",
    "fastapi>=0.104",
    "uvicorn>=0.24",
]

[tool.setuptools.packages.find]
where = ["sdk/python"]
include = ["nqpu*"]
exclude = ["tests*", "demos*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "slow: longer-running backend and VQE validation tests",
    "integration: cross-package integration tests",
]
